--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -41,7 +41,8 @@ jobs:
         env:
           JEKYLL_ENV: production
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3 # This will automatically upload an artifact from the '/_site' directory
+        # This will automatically upload an artifact from the '/_site' directory
+        uses: actions/upload-pages-artifact@v2
 
   # Deployment job
   deploy:
